# helix

./: .appveyor.yml  .editorconfig  .gitignore  .rspec  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  LICENSE.txt  README.md  RELEASE.md  Rakefile  Vagrantfile  console.d.ts  module.bundle  provision.sh  test.rs  turboruby.gemspec
.cargo/: config
cli/: Gemfile  helix_cli.gemspec
cli/lib/: helix_cli.rb
cli/lib/helix_cli/: build_task.rb  cli.rb  parent_build_task.rb  parent_project.rb  platform.rb  project.rb
crates/cstr-macro/: Cargo.toml
crates/cstr-macro/src/: lib.rs
crates/ffi_buf/: Cargo.toml
crates/ffi_buf/src/: lib.rs
crates/libcruby/: Cargo.toml
crates/libcruby-sys/: Cargo.toml  build.rs  prepackage.sh  winbuild.rs
crates/libcruby-sys/src/: lib.rs  macros.rs
crates/libcruby/src/: consts.rs  helpers.rs  lib.rs  ruby.rs  types.rs
examples/: README.md  runner  shared.rb
examples/calculator/: Cargo.toml  Rakefile
examples/calculator/lib/: calculator.rb
examples/calculator/spec/: calculator_spec.rb  spec_helper.rb
examples/calculator/src/: lib.rs
examples/console/: .gitignore  Cargo.toml  Gemfile  Rakefile  build.rb  build.sh  libconsole.bundle
examples/console/ext/: Makefile  extconf.rb  helix_runtime.bundle  helix_runtime.c
examples/console/lib/: console.rb  libconsole.bundle  module.bundle
examples/console/spec/: console_spec.rb  spec_helper.rb
examples/console/src/: Makefile  lib.rs
examples/docopt/: Cargo.toml  Gemfile  Rakefile
examples/docopt/lib/: docopt.rb
examples/docopt/spec/: docopt_spec.rb  spec_helper.rb
examples/docopt/src/: lib.rs
examples/duration/: Cargo.toml  Gemfile  Rakefile  duration.gemspec
examples/duration/lib/: duration.rb
examples/duration/src/: lib.rs
examples/duration/test/: duration_test.rb
examples/game_of_life/: Cargo.toml  Gemfile  Rakefile
examples/game_of_life/lib/: game_of_life.rb
examples/game_of_life/spec/: game_of_life_spec.rb  spec_helper.rb
examples/game_of_life/src/: lib.rs
examples/geometry/: Cargo.toml  Gemfile
examples/geometry/lib/: geometry.rb
examples/geometry/spec/: geometry_spec.rb  spec_helper.rb
examples/geometry/src/: lib.rs
examples/journey/: Cargo.toml  Gemfile  journey.gemspec
examples/journey/lib/: journey.rb
examples/journey/lib/journey/: ruby.rb  version.rb
examples/journey/src/: lib.rs  nodes.rs  parser.lalrpop  parser.rs  scanner.rs  tests.rs
examples/journey/test/: test_helper.rb
examples/journey/test/route/definition/: parser_test.rb  scanner_test.rb
examples/json_builder/: Cargo.toml  Rakefile
examples/json_builder/lib/: json_builder.rb
examples/json_builder/spec/: json_builder_spec.rb  spec_helper.rb
examples/json_builder/src/: coercion.rs  lib.rs
examples/membership/: Cargo.toml  Gemfile  Rakefile  benchmark.rb
examples/membership/js/: membership.js
examples/membership/lib/: membership.rb
examples/membership/spec/: membership_spec.rb  spec_helper.rb
examples/membership/src/: lib.rs
examples/no_macros/: Cargo.toml  Rakefile
examples/no_macros/lib/: no_macros.rb
examples/no_macros/spec/: no_macros_spec.rb  spec_helper.rb
examples/no_macros/src/: lib.rs
examples/primitive/: Cargo.toml  Rakefile
examples/primitive/lib/: primitive.rb
examples/primitive/spec/: primitive_spec.rb  spec_helper.rb
examples/primitive/src/: lib.rs
examples/shared/: example.rake  platform.rb
examples/text_transform/: Cargo.toml  Gemfile  Rakefile
examples/turbo_blank/: Cargo.toml  Gemfile  Rakefile  benchmark.rb  turbo_blank.gemspec
examples/unit/: Cargo.toml  Gemfile  Rakefile
lib/: turboruby.rb
lib/turbo_ruby/: compiler.rb  file_system.rb  parser.rb  version.rb
ruby/: .gitignore  Gemfile  README.md  Rakefile  helix_runtime.gemspec
ruby/lib/: helix_runtime.rb
ruby/spec/: helix_runtime_spec.rb  spec_helper.rb
scripts/: ci-install  ci-test  provision.sh  ruby_info.rb  test-release
spec/: compiler_spec.rb  file_system_spec.rb  integration_spec.rb  parser_spec.rb  smoke_spec.rb  spec_helper.rb  type_spec.rb
spec/fixtures/: fast_blank.trb
src/: class_definition.rs  coercions.rs  errors.rs  lib.rs  macros.rs
src/coercions/: array.rs  bool.rs  complex.rs  float.rs  hash.rs  integers.rs  mod.rs  number.rs  option.rs  rational.rs  regex.rs  result.rs  slice.rs  string.rs  symbol.rs  tuples.rs  unit.rs  value.rs  vec.rs
src/macros/: alloc.rs  codegen.rs  coercions.rs  debug.rs  init.rs  mod.rs  parser.rs  safe.rs
src/ruby/: array.rs  mod.rs  types.rs  value.rs
(+45 files in other folders)
