[package]
name = "helix_runtime"
version = "0.5.0-alpha-2"
authors = ["Godhuda <engineering+godhuda@tilde.io>"]
description = "Embed Rust in your Ruby"
license = "MIT/Apache-2.0"
include = [
  "src/**/*.rs",
  "Cargo.toml"
]

[workspace]

members = ["examples/calculator", "examples/console", "examples/duration", "examples/membership", "examples/text_transform", "examples/turbo_blank"]

[dependencies]
libc = "0.2.0"

[dependencies.cslice]
version = "0.2"

[dependencies.libcruby-sys]
path = "crates/libcruby-sys"
version = "0.5.0-alpha-2"

[dependencies.cstr-macro]
path = "crates/cstr-macro"
version = "0.1.0"
