[package]
name = "libcruby-sys"
version = "0.5.0-alpha-3"
authors = ["Godhuda <engineering+godhuda@tilde.io>"]
description = "Ruby bindings"
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "**/*.rs",
    "Cargo.toml",
    "ruby_info.rb",
    # Keep in sync with version
    "helix-runtime-0-5-0-alpha-3.i386.lib",
    "helix-runtime-0-5-0-alpha-3.x86_64.lib"
]

[dependencies]

libc = ">= 0.1.0"
