[package]
name = "libcruby-sys"
version = "0.6.1"
authors = ["Godhuda <engineering+godhuda@tilde.io>"]
description = "Ruby bindings"
repository = "https://github.com/tildeio/helix"
license = "ISC"
build = "build.rs"
include = [
    "**/*.rs",
    "Cargo.toml",
    "ruby_info.rb",
    # Keep in sync with version
    "helix-runtime-0-6-0.i386.lib",
    "helix-runtime-0-6-0.x86_64.lib"
]

[dependencies]

libc = ">= 0.1.0"
