[package]
name = "journey"
version = "0.1.0"
authors = ["Vaidehi Joshi <vaidehi.sj@gmail.com>", "Godfrey Chan <godfreykfc@gmail.com>"]

[lib]

crate-type = ["cdylib"]

[dependencies.helix]
path = "../.."

[dependencies]
owned_chars = "0.3.0"
lalrpop-util = "0.15.2"
regex = "1.0.1"

[build-dependencies]
lalrpop = "0.15.2"
